namespace Cochera.Domain.Enums;

public enum EstadoCajon
{
    Libre,
    Ocupado
}
