namespace Cochera.Domain.Enums;

public enum EstadoSesion
{
    Activa,
    PendientePago,
    Finalizada,
    Cancelada
}
