namespace Cochera.Domain.Enums;

public enum MetodoPago
{
    Efectivo,
    Tarjeta,
    Transferencia
}
