namespace Cochera.Domain.Enums;

public enum TipoEvento
{
    SistemaIniciado,
    MovimientoEntrada,
    MovimientoEntradaBloqueado,
    VehiculoSalio,
    CajonOcupado,
    CajonLiberado,
    ParpadeoIniciado,
    ParpadeoTimeout,
    CocheraLlena
}
