// <auto-generated />
using System;
using Cochera.Infrastructure.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace Cochera.Infrastructure.Migrations
{
    [DbContext(typeof(CocheraDbContext))]
    partial class CocheraDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.11")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("Cochera.Domain.Entities.Cajon", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<int>("Estado")
                        .HasColumnType("integer");

                    b.Property<DateTime?>("FechaActualizacion")
                        .HasColumnType("timestamp without time zone");

                    b.Property<DateTime>("FechaCreacion")
                        .HasColumnType("timestamp without time zone");

                    b.Property<int>("Numero")
                        .HasColumnType("integer");

                    b.Property<DateTime?>("UltimoCambioEstado")
                        .HasColumnType("timestamp without time zone");

                    b.HasKey("Id");

                    b.HasIndex("Numero")
                        .IsUnique();

                    b.ToTable("Cajones");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Estado = 0,
                            FechaCreacion = new DateTime(2025, 1, 1, 0, 0, 0, 0, DateTimeKind.Utc),
                            Numero = 1
                        },
                        new
                        {
                            Id = 2,
                            Estado = 0,
                            FechaCreacion = new DateTime(2025, 1, 1, 0, 0, 0, 0, DateTimeKind.Utc),
                            Numero = 2
                        });
                });

            modelBuilder.Entity("Cochera.Domain.Entities.EstadoCochera", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<bool>("Cajon1Ocupado")
                        .HasColumnType("boolean");

                    b.Property<bool>("Cajon2Ocupado")
                        .HasColumnType("boolean");

                    b.Property<int>("CajonesLibres")
                        .HasColumnType("integer");

                    b.Property<int>("CajonesOcupados")
                        .HasColumnType("integer");

                    b.Property<bool>("CocheraLlena")
                        .HasColumnType("boolean");

                    b.Property<DateTime?>("FechaActualizacion")
                        .HasColumnType("timestamp without time zone");

                    b.Property<DateTime>("FechaCreacion")
                        .HasColumnType("timestamp without time zone");

                    b.Property<DateTime>("UltimaActualizacion")
                        .HasColumnType("timestamp without time zone");

                    b.HasKey("Id");

                    b.ToTable("EstadosCochera");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Cajon1Ocupado = false,
                            Cajon2Ocupado = false,
                            CajonesLibres = 2,
                            CajonesOcupados = 0,
                            CocheraLlena = false,
                            FechaCreacion = new DateTime(2025, 1, 1, 0, 0, 0, 0, DateTimeKind.Utc),
                            UltimaActualizacion = new DateTime(2025, 1, 1, 0, 0, 0, 0, DateTimeKind.Utc)
                        });
                });

            modelBuilder.Entity("Cochera.Domain.Entities.EventoSensor", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<int>("CajonesLibres")
                        .HasColumnType("integer");

                    b.Property<int>("CajonesOcupados")
                        .HasColumnType("integer");

                    b.Property<bool>("CocheraLlena")
                        .HasColumnType("boolean");

                    b.Property<string>("Detalle")
                        .IsRequired()
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)");

                    b.Property<string>("EstadoCajon1")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)");

                    b.Property<string>("EstadoCajon2")
                        .IsRequired()
                        .HasMaxLength(20)
                        .HasColumnType("character varying(20)");

                    b.Property<string>("EventoOriginal")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)");

                    b.Property<DateTime?>("FechaActualizacion")
                        .HasColumnType("timestamp without time zone");

                    b.Property<DateTime>("FechaCreacion")
                        .HasColumnType("timestamp without time zone");

                    b.Property<string>("JsonOriginal")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("TimestampESP32")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.Property<int>("TipoEvento")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.ToTable("Eventos");
                });

            modelBuilder.Entity("Cochera.Domain.Entities.Pago", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<DateTime?>("FechaActualizacion")
                        .HasColumnType("timestamp without time zone");

                    b.Property<DateTime>("FechaCreacion")
                        .HasColumnType("timestamp without time zone");

                    b.Property<DateTime>("FechaPago")
                        .HasColumnType("timestamp without time zone");

                    b.Property<int>("MetodoPago")
                        .HasColumnType("integer");

                    b.Property<decimal>("Monto")
                        .HasPrecision(18, 2)
                        .HasColumnType("numeric(18,2)");

                    b.Property<string>("Referencia")
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)");

                    b.Property<int>("SesionId")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.HasIndex("SesionId")
                        .IsUnique();

                    b.ToTable("Pagos");
                });

            modelBuilder.Entity("Cochera.Domain.Entities.SesionEstacionamiento", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<int>("CajonId")
                        .HasColumnType("integer");

                    b.Property<int>("Estado")
                        .HasColumnType("integer");

                    b.Property<DateTime?>("FechaActualizacion")
                        .HasColumnType("timestamp without time zone");

                    b.Property<DateTime>("FechaCreacion")
                        .HasColumnType("timestamp without time zone");

                    b.Property<DateTime>("HoraEntrada")
                        .HasColumnType("timestamp without time zone");

                    b.Property<DateTime?>("HoraSalida")
                        .HasColumnType("timestamp without time zone");

                    b.Property<int>("MinutosEstacionado")
                        .HasColumnType("integer");

                    b.Property<decimal>("MontoTotal")
                        .HasPrecision(18, 2)
                        .HasColumnType("numeric(18,2)");

                    b.Property<decimal>("TarifaPorMinuto")
                        .HasPrecision(18, 2)
                        .HasColumnType("numeric(18,2)");

                    b.Property<int>("UsuarioId")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.HasIndex("CajonId");

                    b.HasIndex("UsuarioId");

                    b.ToTable("Sesiones");
                });

            modelBuilder.Entity("Cochera.Domain.Entities.Tarifa", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<bool>("Activa")
                        .HasColumnType("boolean");

                    b.Property<string>("Descripcion")
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)");

                    b.Property<DateTime?>("FechaActualizacion")
                        .HasColumnType("timestamp without time zone");

                    b.Property<DateTime>("FechaCreacion")
                        .HasColumnType("timestamp without time zone");

                    b.Property<DateTime?>("FechaFin")
                        .HasColumnType("timestamp without time zone");

                    b.Property<DateTime>("FechaInicio")
                        .HasColumnType("timestamp without time zone");

                    b.Property<decimal>("PrecioPorMinuto")
                        .HasPrecision(18, 2)
                        .HasColumnType("numeric(18,2)");

                    b.HasKey("Id");

                    b.ToTable("Tarifas");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Activa = true,
                            Descripcion = "Tarifa estándar",
                            FechaCreacion = new DateTime(2025, 1, 1, 0, 0, 0, 0, DateTimeKind.Utc),
                            FechaInicio = new DateTime(2025, 1, 1, 0, 0, 0, 0, DateTimeKind.Utc),
                            PrecioPorMinuto = 8.0m
                        });
                });

            modelBuilder.Entity("Cochera.Domain.Entities.Usuario", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Codigo")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.Property<bool>("EsAdmin")
                        .HasColumnType("boolean");

                    b.Property<DateTime?>("FechaActualizacion")
                        .HasColumnType("timestamp without time zone");

                    b.Property<DateTime>("FechaCreacion")
                        .HasColumnType("timestamp without time zone");

                    b.Property<string>("Nombre")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)");

                    b.HasKey("Id");

                    b.HasIndex("Codigo")
                        .IsUnique();

                    b.ToTable("Usuarios");

                    b.HasData(
                        new
                        {
                            Id = 1,
                            Codigo = "admin",
                            EsAdmin = true,
                            FechaCreacion = new DateTime(2025, 1, 1, 0, 0, 0, 0, DateTimeKind.Utc),
                            Nombre = "Administrador"
                        },
                        new
                        {
                            Id = 2,
                            Codigo = "usuario_1",
                            EsAdmin = false,
                            FechaCreacion = new DateTime(2025, 1, 1, 0, 0, 0, 0, DateTimeKind.Utc),
                            Nombre = "Usuario 1"
                        },
                        new
                        {
                            Id = 3,
                            Codigo = "usuario_2",
                            EsAdmin = false,
                            FechaCreacion = new DateTime(2025, 1, 1, 0, 0, 0, 0, DateTimeKind.Utc),
                            Nombre = "Usuario 2"
                        },
                        new
                        {
                            Id = 4,
                            Codigo = "usuario_3",
                            EsAdmin = false,
                            FechaCreacion = new DateTime(2025, 1, 1, 0, 0, 0, 0, DateTimeKind.Utc),
                            Nombre = "Usuario 3"
                        });
                });

            modelBuilder.Entity("Cochera.Domain.Entities.Pago", b =>
                {
                    b.HasOne("Cochera.Domain.Entities.SesionEstacionamiento", "Sesion")
                        .WithOne("Pago")
                        .HasForeignKey("Cochera.Domain.Entities.Pago", "SesionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Sesion");
                });

            modelBuilder.Entity("Cochera.Domain.Entities.SesionEstacionamiento", b =>
                {
                    b.HasOne("Cochera.Domain.Entities.Cajon", "Cajon")
                        .WithMany("Sesiones")
                        .HasForeignKey("CajonId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("Cochera.Domain.Entities.Usuario", "Usuario")
                        .WithMany("Sesiones")
                        .HasForeignKey("UsuarioId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("Cajon");

                    b.Navigation("Usuario");
                });

            modelBuilder.Entity("Cochera.Domain.Entities.Cajon", b =>
                {
                    b.Navigation("Sesiones");
                });

            modelBuilder.Entity("Cochera.Domain.Entities.SesionEstacionamiento", b =>
                {
                    b.Navigation("Pago");
                });

            modelBuilder.Entity("Cochera.Domain.Entities.Usuario", b =>
                {
                    b.Navigation("Sesiones");
                });
#pragma warning restore 612, 618
        }
    }
}
